[package]
name = "onelang"
description = "because everyone should have their own language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
